--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 
     <a href="https://www.prepbytes.com/"><span class="bg2">prepbytes home</span></a>
     <br><br>
-    <a href="https://www.prepbytes.com/"><img src="./images/pb.jpg" alt="" height=50px width=50px></a>
+    <a href="https://www.prepbytes.com/"><img src="./pb.jpg" alt="" height=50px width=50px></a>
     <br><br>
     <a href="./page2.html"><span class="bg2">Proceed to next page</span></a>
 </body>
